fixed alignment issues with font awesome

--- a/public/assets/css/homepage.css
+++ b/public/assets/css/homepage.css
@@ -12,6 +12,9 @@ body {
 .sub-heading {
     text-transform: capitalize;
 }
+i {
+    margin-top: .48em;
+}
 p {
     font-size: 14px;
     line-height: 1.75;
